consolidate css fix body margin gap

--- a/what-should-i-watch/src/App.css
+++ b/what-should-i-watch/src/App.css
@@ -1,3 +1,13 @@
+.body-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: center;
+  margin: 0;
+  padding: 8px;
+  min-width: 1vw;
+}
+
 .about {
   display: flex;
   flex-direction: column;
